Bug validation fixed